--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change if your branch is named differently
+      - main  # Change this if your default branch is different
 
 jobs:
   build:
@@ -11,16 +11,18 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4  # Updated to v4 for Node.js 20 support
+        uses: actions/setup-node@v4
         with:
-          node-version: 20  # Ensuring it uses the latest version
-          cache: 'pnpm'  # Caching dependencies for faster builds
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2  # Use the official pnpm setup action
+        with:
+          version: 8  # Use the latest compatible pnpm version
 
       - name: Install Dependencies
         run: pnpm install
@@ -29,7 +31,7 @@ jobs:
         run: pnpm build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4  # Updated to v4 for Node.js 20 support
+        uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out  # Adjust if needed (e.g., `.next` folder for Next.js)
+          publish_dir: ./out  # Adjust based on your Next.js output folder
